--- a/style.css
+++ b/style.css
@@ -22,18 +22,51 @@ body {
   min-height: 100vh;
   margin: 0 auto;
 
+  background-color: var(--Light-gray);
+
   font-family: "Outfit", sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 p {
+  padding: 0 1rem;
   /* === 15px */
   font-size: 0.9375rem;
   font-weight: 400;
+  color: var(--Grayish-blue);
+  line-height: 1.25;
+}
+
+h1 {
+  margin: 1.25rem 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--Dark-blue);
+}
+
+main {
+  height: 500px;
+  width: 320px;
+  padding: 1rem;
+  border-radius: 1.25rem;
+
+  background-color: var(--White);
+  text-align: center;
+}
+
+.qr-image {
+  width: 100%;
+  border-radius: 0.75rem;
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: var(--Grayish-blue);
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
